--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,4 @@ streamlit
 -f https://download.pytorch.org/whl/torch_stable.html                                                                                                                                                             
 torch==1.6.0+cpu
 fastai
+pathlib
